--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
       - master
       - main
 jobs:
-  build-and-deploy:
+  Build:
     runs-on: ubuntu-latest
     steps:
     - name: Setup Node.js
@@ -18,6 +18,11 @@ jobs:
       run: |
         npm install
         npm run-script build
+
+  Deploy:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
