update for cicd demo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,38 @@ jobs:
         npm install
         npm run-script build
 
-  Deploy:
+  Dev_A:
     runs-on: ubuntu-latest
     needs: Build
     steps:
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@releases/v3
-      with:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: build
+    - name: Deploy to Dev A
+      # uses: JamesIves/github-pages-deploy-action@releases/v3
+      # with:
+      #   ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      #   BRANCH: gh-pages
+      #   FOLDER: build
+      run: echo "Demo for dev deploy"
+  
+  Dev_b:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
+    - name: Deploy to Dev B
+      # uses: JamesIves/github-pages-deploy-action@releases/v3
+      # with:
+      #   ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      #   BRANCH: gh-pages
+      #   FOLDER: build
+      run: echo "Demo for dev deploy"    
+
+  Production:
+    runs-on: ubuntu-latest
+    needs: [Dev_A, Dev_B]
+    steps:
+    - name: Deploy to Prd
+      # uses: JamesIves/github-pages-deploy-action@releases/v3
+      # with:
+      #   ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      #   BRANCH: gh-pages
+      #   FOLDER: build
+      run: echo "Demo for prd deploy"    
